--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <title>iBlog - Heaven for bloggers</title>
+    <title>Cameo</title>
 </head>
 <body>
     <nav class="navigation max-width-1 m-auto">
@@ -40,10 +40,10 @@
                 <h3>Year </h3>
             </div>
             <div>
-                <input type="radio" name="year" id=""> 2020
+                <input type="radio" name="year" id=""> 2022
             </div>
             <div>
-                <input type="radio" name="year" id=""> 2021
+                <input type="radio" name="year" id=""> 2023
             </div>
         </div>
         <div class="home-article">
@@ -138,7 +138,7 @@
     </div>
 
     <div class="footer">
-        <p>Copyright &copy; iBlog.com </p>
+        <p>Copyright &copy; cameodubz.com </p>
          <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a> 
     </div>
 </body>
