--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
     </div>
     <div class="m-auto content max-width-1 my-2">
         <div class="content-left">
-            <h1>The heaven for bloggers</h1>
-            <p>iBlog is a website which lets you submit an article which upon approval will be up on our website and you
-                can get a good amount of reach from here!</p>
-            <p>My Halloween decorations are staying in the box this year. To be honest, they didn’t make it out of the
-                box last year either. My Halloween spirit has officially been bludgeoned to death by teenagers who no
-                longer care and a persistent October fear of the Northern California wildfires. And speaking of fear,
-                isn’t there more than enough of that going around? Maybe all of us can pretend that Halloween isn’t even
-                happening this year?</p>
+            <h1>AI & Tech News</h1>
+            <p>Stay up to date with the latest in Artificial Intelligence and tech.</p>
+            <p>Read blogs written by AI and fact-checked by humans.</p>
         </div>
         <div class="content-right">
             <img src="img/home.svg" alt="iBlog">
@@ -60,10 +55,10 @@
                 <h3>Year </h3>
             </div>
             <div>
-                <input type="radio" name="year" id=""> 2020
+                <input type="radio" name="year" id=""> 2022
             </div>
             <div>
-                <input type="radio" name="year" id=""> 2021
+                <input type="radio" name="year" id=""> 2023
             </div>
         </div>
         <div class="home-article">
@@ -72,11 +67,11 @@
             </div>
             <div class="home-article-content font1">
                 <a href="/blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                    <h3>The Ultimate Guide to AI Marketing Implementation for Business Owners</h3>
                 </a>
 
-                <div>Author Name</div>
-                <span>07 January | 6 min read</span>
+                <div>Cameron White</div>
+                <span>01 September | 15 min read</span>
             </div>
         </div>
         <div class="home-article">
